--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- FAVICON -->
+  <link rel="icon" href="/favicon.png" />
+
+  <!-- PWA -->
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#14b8a6" />
-  <link rel="apple-touch-icon" href="/icon-192.png" />
-  <!-- Inter EXACTAMENTE como en admin -->
+
+  <!-- Apple -->
+  <link rel="apple-touch-icon" href="/iconopanel192.png" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700;800&display=swap" rel="stylesheet">
 
-  <title>timeo-tablet</title>
+  <title>Timeo Tablet</title>
 </head>
 
 <body>
